removed deprecated option MaxPermsize which results in a warning in Java 8 and an error in Java 9