@@ -77,7 +77,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <argLine>-Xmx1g -XX:MaxPermSize=256m -Duser.timezone=UTC</argLine>
+                    <argLine>-Xmx1g -Duser.timezone=UTC</argLine>
                     <reuseForks>false</reuseForks>
                 </configuration>
             </plugin>
