@@ -309,7 +309,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <argLine>-Xmx1g -XX:MaxPermSize=256m -Duser.timezone=UTC</argLine>
+                    <argLine>-Xmx1g -Duser.timezone=UTC</argLine>
                     <reuseForks>false</reuseForks>
                     <forkCount>1</forkCount>
                 </configuration>
